# AIA-Minimal-Path

./: .gitignore
astar-chisinau/: .dockerignore  README.md  docker-compose.yml
astar-chisinau/core/: CMakeLists.txt  astar.c  astar.h  main.c
astar-chisinau/data/: edges.csv  nodes.csv  pois.json
astar-chisinau/preprocess/: fetch_pois.py  preprocess.py
astar-chisinau/server/: Dockerfile  server.py
astar-chisinau/ui/: index.html  package-lock.json  package.json  vite.config.ts
astar-chisinau/ui/src/: App.tsx  index.css
astar-chisinau/ui/src/algorithms/: astar.ts
astar-chisinau/ui/src/components/: AnimationLayer.tsx  MapView.tsx  NodeSearch.tsx  POILayer.tsx  POIToggle.tsx  RouteCard.tsx  Sidebar.tsx  SpeedControl.tsx
astar-chisinau/ui/src/hooks/: useAstar.ts
astar-chisinau/ui/src/types/: graph.ts
